add avatars, column headings

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
 
     <div class="mainContent">
-
-        <section class="cards">
-
+        <div>
+        <h5 class="mainContH5">Recent Projects</h5>
+        <section>
             <div class="card">
                 <h5>Card Title</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
@@ -171,62 +171,56 @@
             </div>
 
 
-            <div class="card">
-                <h5>Card Title</h5>
-                <p>lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, vero. Cum dolorum quia perferendis mollitia illo exercitationem, voluptates asperiores, ea distinctio eos neque illum tempora explicabo. Recusandae cupiditate nisi placeat.</p>
-                <div class="cardIcons">
-                    <a href="#"><img src="checkcircle.svg" alt="complete task icon"></a>
-                    <a href="#"><img src="heart.svg" alt="favorite icon"></a>
-                    <a href="#"><img src="share.svg" alt="share icon"></a>
-                </div>
-            </div>
-
-
-            <div class="card">
-                <h5>Card Title</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi earum, aperiam ad quas neque modi, asperiores dicta odio consectetur laborum laboriosam? Iure, doloribus? Earum id nisi, error neque quam recusandae.</p>
-                <div class="cardIcons">
-                    <a href="#"><img src="checkcircle.svg" alt="complete task icon"></a>
-                    <a href="#"><img src="heart.svg" alt="favorite icon"></a>
-                    <a href="#"><img src="share.svg" alt="share icon"></a>
-                </div>
-            </div>
+            
 
 
         </section><!-- END OF SECTION -->
-
+        </div>
 
         <div class="mainRightDiv">
-            <div class="card">
+
             <div>
-                <h5>Announcing</h5>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A repellat, amet aspernatur iste eveniet tempora dolorum dolore repellendus similique adipisci ipsum expedita libero, voluptas labore doloribus excepturi est totam? Inventore!</p>
-                <hr>
-            </div>
-            <div>
-                <h5>Announcing</h5>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A repellat, amet aspernatur iste eveniet tempora dolorum dolore repellendus similique adipisci ipsum expedita libero, voluptas labore doloribus excepturi est totam? Inventore!</p>
-                <hr>
-            </div>
-            <div>
-                <h5>Announcing</h5>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A repellat, amet aspernatur iste eveniet tempora dolorum dolore repellendus similique adipisci ipsum expedita libero, voluptas labore doloribus excepturi est totam? Inventore!</p>
-            </div>
-            </div>
-            <div class="card">
+                <h5 class="mainContH5">Announcements</h5>
+                <div class="card">
                 <div>
-                    <h5>Trend</h5>
-                    <p>some real shit</p>
+                    <h5>Some real shit</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A repellat, amet aspernatur iste eveniet tempora dolorum dolore repellendus similique adipisci ipsum expedita libero, voluptas labore doloribus excepturi est totam? Inventore!</p>
                     <hr>
                 </div>
                 <div>
-                    <h5>Trend</h5>
-                    <p>some real shit</p>
+                    <h5>Some truly real shit</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A repellat, amet aspernatur iste eveniet tempora dolorum dolore repellendus similique adipisci ipsum expedita libero, voluptas labore doloribus excepturi est totam? Inventore!</p>
                     <hr>
                 </div>
-                <div>
-                    <h5>Trend</h5>
-                    <p>some real shit</p>
+                
+                </div>
+            </div>
+            <div>
+                <h5 class="mainContH5">Trending Accounts</h5>
+                <div class="card">
+                    <div class="trending">
+                        <img src="trending1.png" class="trendAvatar" alt="avatar">
+                        <div>
+                            <h5>The Boss</h5>
+                            <p>@thebossfr</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="trending">
+                        <img src="trending2.png" class="trendAvatar" alt="avatar">
+                        <div>
+                            <h5>Pliskin</h5>
+                            <p>@betterthanliquid</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="trending">
+                        <img src="trending3.png" class="trendAvatar" alt="avatar">
+                        <div>
+                            <h5>Ocelot</h5>
+                            <p>@6bullets</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div><!-- END OF MAINRIGHT-->
