id and class cleanup, ready for flex

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
 
     <div class="mainContent">
-        <div>
-        <h5 class="mainContH5">Recent Projects</h5>
+        <div id="mainLeftDiv">
+        <h5 class="mainContentH5">Recent Projects</h5>
         <section>
             <div class="card">
                 <h5>Card Title</h5>
@@ -180,7 +180,7 @@
         <div class="mainRightDiv">
 
             <div>
-                <h5 class="mainContH5">Announcements</h5>
+                <h5 class="mainContentH5">Announcements</h5>
                 <div class="card">
                 <div>
                     <h5>Some real shit</h5>
@@ -196,7 +196,7 @@
                 </div>
             </div>
             <div>
-                <h5 class="mainContH5">Trending Accounts</h5>
+                <h5 class="mainContentH5">Trending Accounts</h5>
                 <div class="card">
                     <div class="trending">
                         <img src="trending1.png" class="trendAvatar" alt="avatar">
