finalize responsive content area w/o media query

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         </section><!-- END OF SECTION -->
         </div>
 
-        <div class="mainRightDiv">
+        <div id="mainRightDiv">
 
             <div>
                 <h5 class="mainContentH5">Announcements</h5>
@@ -190,7 +190,7 @@
                 <div>
                     <h5>Some truly real shit</h5>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A repellat, amet aspernatur iste eveniet tempora dolorum dolore repellendus similique adipisci ipsum expedita libero, voluptas labore doloribus excepturi est totam? Inventore!</p>
-                    <hr>
+                    
                 </div>
                 
                 </div>
