add footer scaffold (and comment out)

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <a href="#"><img src="security.svg"></a><a href="#"><li>Privacy</li></a>
         </ul>
         </div>
+
     </div>
 
     
@@ -226,6 +227,12 @@
         </div><!-- END OF MAINRIGHT-->
 
     </div><!-- END OF MAINCONTENT-->
-</div>
+    
+</div><!--END of main container-->
+
+<!-- <div class="footer">
+    <h4><a href="https://github.com/orzcode">Orzcode @ Github</a></h4>
+</div> -->
+
 </body>
 </html>
